<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.ui.activity.LoginActivity">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_marginTop="-100dp"
            android:layout_width="250dp"
            android:layout_height="400dp"
            android:layout_gravity="center_horizontal"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/login_animation"/>

        <EditText
            android:layout_marginTop="-100dp"
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/teal_200"
            android:hint="@string/email_input"
            android:inputType="textEmailAddress"
            android:paddingStart="50dp"
            android:paddingEnd="50dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/teal_200"
            android:hint="@string/senha_input"
            android:inputType="textPassword"
            android:paddingStart="50dp"
            android:paddingEnd="50dp" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:padding="20dp"
            android:text="@string/entrar_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/hint_help_btn"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/register_help_btn"
            android:textSize="15sp" />

    </LinearLayout>
</layout>