<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.activity.SigninActivity">

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="10dp"
        android:background="@color/teal_200"
        android:hint="@string/email_input"
        android:inputType="textEmailAddress"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/teal_200"
        android:hint="@string/senha_input"
        android:inputType="text"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"/>

    <Button
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="20dp"
        android:text="@string/signin_txt"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>